add :: PlaceService @Transactional 적용 및 커스텀 예외 사용