@@ -3,23 +3,23 @@ package team.eodegano.domain.place.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import team.eodegano.domain.place.dto.PlaceRequest;
-import team.eodegano.domain.place.dto.PlaceResponse;
 import team.eodegano.domain.place.entity.Place;
+import team.eodegano.domain.place.presentation.dto.request.PlaceRequest;
+import team.eodegano.domain.place.presentation.dto.response.PlaceResponse;
 import team.eodegano.domain.place.repository.PlaceRepository;
+import team.eodegano.global.exception.PlaceNotFoundException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class PlaceService {
 
     private final PlaceRepository placeRepository;
 
-    @Transactional
     public PlaceResponse addPlace(Long tripId, PlaceRequest request) {
-        Integer orderIndex = request.getOrder();
+        Integer orderIndex = request.orderIndex();
 
         if (orderIndex != null) {
             placeRepository.incrementOrderIndexFrom(tripId, orderIndex);
@@ -29,47 +29,49 @@ public class PlaceService {
                     .orElse(0);
         }
 
-        Place place = new Place();
-        place.setTripId(tripId);
-        place.setName(request.getName());
-        place.setCategory(request.getCategory());
-        place.setAddress(request.getAddress());
-        place.setLatitude(request.getLatitude());
-        place.setLongitude(request.getLongitude());
-        place.setDescription(request.getDescription());
-        place.setOrderIndex(orderIndex);
-
-        Place saved = placeRepository.save(place);
-        return toResponse(saved);
+        Place place = Place.builder()
+                .tripId(tripId)
+                .name(request.name())
+                .category(request.category())
+                .address(request.address())
+                .latitude(request.latitude())
+                .longitude(request.longitude())
+                .description(request.description())
+                .orderIndex(orderIndex)
+                .build();
+        return PlaceResponse.from(placeRepository.save(place));
     }
 
+    @Transactional(readOnly = true)
     public List<PlaceResponse> getPlaces(Long tripId) {
         return placeRepository.findAllByTripIdOrderByOrderIndex(tripId)
                 .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+                .map(PlaceResponse::from)
+                .toList();
+    }
+
+    public PlaceResponse updatePlace(Long tripId, Long placeId, PlaceRequest request) {
+        Place place = findPlaceByIdAndTripId(placeId, tripId);
+        place.update(request.name(), request.category(), request.address(),
+                request.latitude(), request.longitude(), request.description(), request.orderIndex());
+        return PlaceResponse.from(place);
     }
 
     public void deletePlace(Long tripId, Long placeId) {
-        Place place = placeRepository.findById(placeId)
-                .orElseThrow(() -> new IllegalArgumentException("유효하지 않은 place ID"));
-        if (!place.getTripId().equals(tripId)) {
-            throw new IllegalArgumentException("유효하지 않은 trip ID");
-        }
+        Place place = findPlaceByIdAndTripId(placeId, tripId);
         placeRepository.delete(place);
     }
 
-    private PlaceResponse toResponse(Place place) {
-        return new PlaceResponse(
-                place.getId(),
-                place.getTripId(),
-                place.getName(),
-                place.getCategory(),
-                place.getAddress(),
-                place.getLatitude(),
-                place.getLongitude(),
-                place.getDescription(),
-                place.getOrderIndex()
-        );
+    public void deleteAllPlaces(Long tripId) {
+        placeRepository.deleteAllByTripId(tripId);
+    }
+
+    private Place findPlaceByIdAndTripId(Long placeId, Long tripId) {
+        Place place = placeRepository.findById(placeId)
+                .orElseThrow(() -> new PlaceNotFoundException(placeId));
+        if (!place.getTripId().equals(tripId)) {
+            throw new PlaceNotFoundException(placeId);
+        }
+        return place;
     }
 }
